fixed dark mode

--- a/style.css
+++ b/style.css
@@ -63,5 +63,5 @@ img{
 }
 
 #warning{
-  font-size:5px;
+  font-size:8px;
 }
